fixed bug when working with path that contained spaces.